cmake_minimum_required(VERSION 3.6)
project(skynet_elliot)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    "Configuration/A6- autolevel/Configuration.h"
    "Configuration/A6- no autolevel/Configuration.h"
    "Configuration/A8- 5buttonkeypad- autolevel- front left sensor/12mm  sensor/Configuration.h"
    "Configuration/A8- 5buttonkeypad- autolevel- front left sensor/18mm sensor/Configuration.h"
    "Configuration/A8- 5buttonkeypad- autolevel- stock anet sensor/Configuration.h"
    "Configuration/A8- 5buttonkeypad- no autolevel/Configuration.h"
    "Configuration/A8- fullgraphicslcd- autolevel- front left sensor/12mm sensor/Configuration.h"
    "Configuration/A8- fullgraphicslcd- autolevel- front left sensor/18mm sensor/Configuration.h"
    "Configuration/A8- fullgraphicslcd- autolevel- stock anet sensor/Configuration.h"
    "Configuration/A8- fullgraphicsLcd- no autolevel/Configuration.h"
    vendor/Marlin/Marlin/example_configurations/adafruit/ST7565/Configuration.h
    vendor/Marlin/Marlin/example_configurations/Cartesio/_Bootscreen.h
    vendor/Marlin/Marlin/example_configurations/Cartesio/Configuration.h
    vendor/Marlin/Marlin/example_configurations/Cartesio/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/delta/biv2.5/Configuration.h
    vendor/Marlin/Marlin/example_configurations/delta/biv2.5/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/delta/generic/Configuration.h
    vendor/Marlin/Marlin/example_configurations/delta/generic/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/delta/kossel_mini/Configuration.h
    vendor/Marlin/Marlin/example_configurations/delta/kossel_mini/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/delta/kossel_pro/Configuration.h
    vendor/Marlin/Marlin/example_configurations/delta/kossel_pro/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/delta/kossel_xl/Configuration.h
    vendor/Marlin/Marlin/example_configurations/delta/kossel_xl/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/Felix/DUAL/Configuration.h
    vendor/Marlin/Marlin/example_configurations/Felix/Configuration.h
    vendor/Marlin/Marlin/example_configurations/Felix/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/Hephestos/Configuration.h
    vendor/Marlin/Marlin/example_configurations/Hephestos/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/Hephestos_2/_Bootscreen.h
    vendor/Marlin/Marlin/example_configurations/Hephestos_2/Configuration.h
    vendor/Marlin/Marlin/example_configurations/Hephestos_2/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/K8200/Configuration.h
    vendor/Marlin/Marlin/example_configurations/K8200/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/K8400/Dual-head/Configuration.h
    vendor/Marlin/Marlin/example_configurations/K8400/Configuration.h
    vendor/Marlin/Marlin/example_configurations/K8400/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/makibox/Configuration.h
    vendor/Marlin/Marlin/example_configurations/makibox/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/RepRapWorld/Megatronics/Configuration.h
    vendor/Marlin/Marlin/example_configurations/RigidBot/Configuration.h
    vendor/Marlin/Marlin/example_configurations/RigidBot/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/SCARA/Configuration.h
    vendor/Marlin/Marlin/example_configurations/SCARA/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/TAZ4/Configuration.h
    vendor/Marlin/Marlin/example_configurations/TAZ4/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/tvrrug/Round2/Configuration.h
    vendor/Marlin/Marlin/example_configurations/tvrrug/Round2/Configuration_adv.h
    vendor/Marlin/Marlin/example_configurations/WITBOX/Configuration.h
    vendor/Marlin/Marlin/example_configurations/WITBOX/Configuration_adv.h
    vendor/Marlin/Marlin/blinkm.cpp
    vendor/Marlin/Marlin/blinkm.h
    vendor/Marlin/Marlin/boards.h
    vendor/Marlin/Marlin/buzzer.h
    vendor/Marlin/Marlin/cardreader.cpp
    vendor/Marlin/Marlin/cardreader.h
    vendor/Marlin/Marlin/circularqueue.h
    vendor/Marlin/Marlin/Conditionals.h
    vendor/Marlin/Marlin/Conditionals_LCD.h
    vendor/Marlin/Marlin/Conditionals_post.h
    vendor/Marlin/Marlin/Configuration.h
    vendor/Marlin/Marlin/Configuration_adv.h
    vendor/Marlin/Marlin/configuration_store.cpp
    vendor/Marlin/Marlin/configuration_store.h
    vendor/Marlin/Marlin/dac_mcp4728.cpp
    vendor/Marlin/Marlin/dac_mcp4728.h
    vendor/Marlin/Marlin/digipot_mcp4451.cpp
    vendor/Marlin/Marlin/dogm_bitmaps.h
    vendor/Marlin/Marlin/dogm_font_data_6x9_marlin.h
    vendor/Marlin/Marlin/dogm_font_data_HD44780_C.h
    vendor/Marlin/Marlin/dogm_font_data_HD44780_J.h
    vendor/Marlin/Marlin/dogm_font_data_HD44780_W.h
    vendor/Marlin/Marlin/dogm_font_data_ISO10646_1.h
    vendor/Marlin/Marlin/dogm_font_data_ISO10646_1_tr.h
    vendor/Marlin/Marlin/dogm_font_data_ISO10646_5_Cyrillic.h
    vendor/Marlin/Marlin/dogm_font_data_ISO10646_CN.h
    vendor/Marlin/Marlin/dogm_font_data_ISO10646_Greek.h
    vendor/Marlin/Marlin/dogm_font_data_ISO10646_Kana.h
    vendor/Marlin/Marlin/dogm_font_data_Marlin_symbols.h
    vendor/Marlin/Marlin/duration_t.h
    vendor/Marlin/Marlin/endstop_interrupts.h
    vendor/Marlin/Marlin/endstops.cpp
    vendor/Marlin/Marlin/endstops.h
    vendor/Marlin/Marlin/enum.h
    vendor/Marlin/Marlin/fastio.h
    vendor/Marlin/Marlin/language.h
    vendor/Marlin/Marlin/language_an.h
    vendor/Marlin/Marlin/language_bg.h
    vendor/Marlin/Marlin/language_ca.h
    vendor/Marlin/Marlin/language_cn.h
    vendor/Marlin/Marlin/language_cz.h
    vendor/Marlin/Marlin/language_da.h
    vendor/Marlin/Marlin/language_de.h
    vendor/Marlin/Marlin/language_el-gr.h
    vendor/Marlin/Marlin/language_el.h
    vendor/Marlin/Marlin/language_en.h
    vendor/Marlin/Marlin/language_es.h
    vendor/Marlin/Marlin/language_eu.h
    vendor/Marlin/Marlin/language_fi.h
    vendor/Marlin/Marlin/language_fr.h
    vendor/Marlin/Marlin/language_gl.h
    vendor/Marlin/Marlin/language_hr.h
    vendor/Marlin/Marlin/language_it.h
    vendor/Marlin/Marlin/language_kana.h
    vendor/Marlin/Marlin/language_kana_utf8.h
    vendor/Marlin/Marlin/language_nl.h
    vendor/Marlin/Marlin/language_pl.h
    vendor/Marlin/Marlin/language_pt-br.h
    vendor/Marlin/Marlin/language_pt-br_utf8.h
    vendor/Marlin/Marlin/language_pt.h
    vendor/Marlin/Marlin/language_pt_utf8.h
    vendor/Marlin/Marlin/language_ru.h
    vendor/Marlin/Marlin/language_test.h
    vendor/Marlin/Marlin/language_tr.h
    vendor/Marlin/Marlin/language_tr_utf8.h
    vendor/Marlin/Marlin/language_uk.h
    vendor/Marlin/Marlin/M100_Free_Mem_Chk.cpp
    vendor/Marlin/Marlin/macros.h
    vendor/Marlin/Marlin/Marlin.h
    vendor/Marlin/Marlin/Marlin_main.cpp
    vendor/Marlin/Marlin/MarlinConfig.h
    vendor/Marlin/Marlin/MarlinSerial.cpp
    vendor/Marlin/Marlin/MarlinSerial.h
    vendor/Marlin/Marlin/mesh_bed_leveling.cpp
    vendor/Marlin/Marlin/mesh_bed_leveling.h
    vendor/Marlin/Marlin/nozzle.h
    vendor/Marlin/Marlin/pins.h
    vendor/Marlin/Marlin/pins_3DRAG.h
    vendor/Marlin/Marlin/pins_5DPRINT.h
    vendor/Marlin/Marlin/pins_A4JP.h
    vendor/Marlin/Marlin/pins_AZTEEG_X1.h
    vendor/Marlin/Marlin/pins_AZTEEG_X3.h
    vendor/Marlin/Marlin/pins_AZTEEG_X3_PRO.h
    vendor/Marlin/Marlin/pins_BAM_DICE_DUE.h
    vendor/Marlin/Marlin/pins_BQ_ZUM_MEGA_3D.h
    vendor/Marlin/Marlin/pins_BRAINWAVE.h
    vendor/Marlin/Marlin/pins_BRAINWAVE_PRO.h
    vendor/Marlin/Marlin/pins_CHEAPTRONIC.h
    vendor/Marlin/Marlin/pins_CNCONTROLS_11.h
    vendor/Marlin/Marlin/pins_CNCONTROLS_12.h
    vendor/Marlin/Marlin/pins_ELEFU_3.h
    vendor/Marlin/Marlin/pins_FELIX2.h
    vendor/Marlin/Marlin/pins_GEN3_MONOLITHIC.h
    vendor/Marlin/Marlin/pins_GEN3_PLUS.h
    vendor/Marlin/Marlin/pins_GEN6.h
    vendor/Marlin/Marlin/pins_GEN6_DELUXE.h
    vendor/Marlin/Marlin/pins_GEN7_12.h
    vendor/Marlin/Marlin/pins_GEN7_13.h
    vendor/Marlin/Marlin/pins_GEN7_14.h
    vendor/Marlin/Marlin/pins_GEN7_CUSTOM.h
    vendor/Marlin/Marlin/pins_K8200.h
    vendor/Marlin/Marlin/pins_K8400.h
    vendor/Marlin/Marlin/pins_LEAPFROG.h
    vendor/Marlin/Marlin/pins_MEGACONTROLLER.h
    vendor/Marlin/Marlin/pins_MEGATRONICS.h
    vendor/Marlin/Marlin/pins_MEGATRONICS_2.h
    vendor/Marlin/Marlin/pins_MEGATRONICS_3.h
    vendor/Marlin/Marlin/pins_MELZI.h
    vendor/Marlin/Marlin/pins_MELZI_MAKR3D.h
    vendor/Marlin/Marlin/pins_MIGHTYBOARD_REVE.h
    vendor/Marlin/Marlin/pins_MINIRAMBO.h
    vendor/Marlin/Marlin/pins_MINITRONICS.h
    vendor/Marlin/Marlin/pins_MKS_13.h
    vendor/Marlin/Marlin/pins_MKS_BASE.h
    vendor/Marlin/Marlin/pins_OMCA.h
    vendor/Marlin/Marlin/pins_OMCA_A.h
    vendor/Marlin/Marlin/pins_PRINTRBOARD.h
    vendor/Marlin/Marlin/pins_PRINTRBOARD_REVF.h
    vendor/Marlin/Marlin/pins_RAMBO.h
    vendor/Marlin/Marlin/pins_RAMPS.h
    vendor/Marlin/Marlin/pins_RAMPS_13.h
    vendor/Marlin/Marlin/pins_RAMPS_OLD.h
    vendor/Marlin/Marlin/pins_RIGIDBOARD.h
    vendor/Marlin/Marlin/pins_RIGIDBOARD_V2.h
    vendor/Marlin/Marlin/pins_RUMBA.h
    vendor/Marlin/Marlin/pins_SAINSMART_2IN1.h
    vendor/Marlin/Marlin/pins_SANGUINOLOLU_11.h
    vendor/Marlin/Marlin/pins_SANGUINOLOLU_12.h
    vendor/Marlin/Marlin/pins_SAV_MKI.h
    vendor/Marlin/Marlin/pins_SETHI.h
    vendor/Marlin/Marlin/pins_STB_11.h
    vendor/Marlin/Marlin/pins_TEENSY2.h
    vendor/Marlin/Marlin/pins_TEENSYLU.h
    vendor/Marlin/Marlin/pins_ULTIMAIN_2.h
    vendor/Marlin/Marlin/pins_ULTIMAKER.h
    vendor/Marlin/Marlin/pins_ULTIMAKER_OLD.h
    vendor/Marlin/Marlin/pinsDebug.h
    vendor/Marlin/Marlin/planner.cpp
    vendor/Marlin/Marlin/planner.h
    vendor/Marlin/Marlin/planner_bezier.cpp
    vendor/Marlin/Marlin/planner_bezier.h
    vendor/Marlin/Marlin/point_t.h
    vendor/Marlin/Marlin/printcounter.cpp
    vendor/Marlin/Marlin/printcounter.h
    vendor/Marlin/Marlin/qr_solve.cpp
    vendor/Marlin/Marlin/qr_solve.h
    vendor/Marlin/Marlin/SanityCheck.h
    vendor/Marlin/Marlin/Sd2Card.cpp
    vendor/Marlin/Marlin/Sd2Card.h
    vendor/Marlin/Marlin/SdBaseFile.cpp
    vendor/Marlin/Marlin/SdBaseFile.h
    vendor/Marlin/Marlin/SdFatConfig.h
    vendor/Marlin/Marlin/SdFatStructs.h
    vendor/Marlin/Marlin/SdFatUtil.cpp
    vendor/Marlin/Marlin/SdFatUtil.h
    vendor/Marlin/Marlin/SdFile.cpp
    vendor/Marlin/Marlin/SdFile.h
    vendor/Marlin/Marlin/SdInfo.h
    vendor/Marlin/Marlin/SdVolume.cpp
    vendor/Marlin/Marlin/SdVolume.h
    vendor/Marlin/Marlin/servo.cpp
    vendor/Marlin/Marlin/servo.h
    vendor/Marlin/Marlin/speed_lookuptable.h
    vendor/Marlin/Marlin/stepper.cpp
    vendor/Marlin/Marlin/stepper.h
    vendor/Marlin/Marlin/stepper_dac.cpp
    vendor/Marlin/Marlin/stepper_dac.h
    vendor/Marlin/Marlin/stepper_indirection.cpp
    vendor/Marlin/Marlin/stepper_indirection.h
    vendor/Marlin/Marlin/stopwatch.cpp
    vendor/Marlin/Marlin/stopwatch.h
    vendor/Marlin/Marlin/temperature.cpp
    vendor/Marlin/Marlin/temperature.h
    vendor/Marlin/Marlin/thermistornames.h
    vendor/Marlin/Marlin/thermistortables.h
    vendor/Marlin/Marlin/twibus.cpp
    vendor/Marlin/Marlin/twibus.h
    vendor/Marlin/Marlin/types.h
    vendor/Marlin/Marlin/ultralcd.cpp
    vendor/Marlin/Marlin/ultralcd.h
    vendor/Marlin/Marlin/ultralcd_impl_DOGM.h
    vendor/Marlin/Marlin/ultralcd_impl_HD44780.h
    vendor/Marlin/Marlin/ultralcd_st7920_u8glib_rrd.h
    vendor/Marlin/Marlin/utf_mapper.h
    vendor/Marlin/Marlin/utility.cpp
    vendor/Marlin/Marlin/utility.h
    vendor/Marlin/Marlin/vector_3.cpp
    vendor/Marlin/Marlin/vector_3.h
    vendor/Marlin/Marlin/Version.h
    vendor/Marlin/Marlin/watchdog.cpp
    vendor/Marlin/Marlin/watchdog.h
    vendor/U8glib_Arduino/src/clib/chessengine.c
    vendor/U8glib_Arduino/src/clib/u8g.h
    vendor/U8glib_Arduino/src/clib/u8g_bitmap.c
    vendor/U8glib_Arduino/src/clib/u8g_circle.c
    vendor/U8glib_Arduino/src/clib/u8g_clip.c
    vendor/U8glib_Arduino/src/clib/u8g_com_api.c
    vendor/U8glib_Arduino/src/clib/u8g_com_api_16gr.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_attiny85_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_common.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_fast_parallel.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_hw_usart_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_no_en_parallel.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_parallel.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_port_d_wr.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_ssd_i2c.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_st7920_custom.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_st7920_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_st7920_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_std_sw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_sw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_t6963.c
    vendor/U8glib_Arduino/src/clib/u8g_com_arduino_uc_i2c.c
    vendor/U8glib_Arduino/src/clib/u8g_com_atmega_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_atmega_parallel.c
    vendor/U8glib_Arduino/src/clib/u8g_com_atmega_st7920_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_atmega_st7920_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_atmega_sw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_atxmega_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_atxmega_st7920_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_i2c.c
    vendor/U8glib_Arduino/src/clib/u8g_com_io.c
    vendor/U8glib_Arduino/src/clib/u8g_com_linux_ssd_i2c.c
    vendor/U8glib_Arduino/src/clib/u8g_com_msp430_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_null.c
    vendor/U8glib_Arduino/src/clib/u8g_com_psoc5_ssd_hw_parallel.c
    vendor/U8glib_Arduino/src/clib/u8g_com_raspberrypi_hw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_com_raspberrypi_ssd_i2c.c
    vendor/U8glib_Arduino/src/clib/u8g_com_std_sw_spi.c
    vendor/U8glib_Arduino/src/clib/u8g_cursor.c
    vendor/U8glib_Arduino/src/clib/u8g_delay.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_a2_micro_printer.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_flipdisc_2x7.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_gprof.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ht1632.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ili9325d_320x240.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ks0108_128x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_lc7981_160x80.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_lc7981_240x128.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_lc7981_240x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_lc7981_320x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ld7032_60x32.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_null.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_pcd8544_84x48.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_pcf8812_96x65.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_sbn1661_122x32.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1306_128x32.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1306_128x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1306_64x48.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1309_128x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1322_nhd31oled_bw.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1322_nhd31oled_gr.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1325_nhd27oled_bw.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1325_nhd27oled_bw_new.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1325_nhd27oled_gr.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1325_nhd27oled_gr_new.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1327_96x96_gr.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1351_128x128.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_ssd1353_160x128.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7565_64128n.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7565_dogm128.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7565_dogm132.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7565_lm6059.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7565_lm6063.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7565_nhd_c12832.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7565_nhd_c12864.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7687_c144mvgd.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7920_128x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7920_192x32.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_st7920_202x32.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_t6963_128x128.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_t6963_128x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_t6963_240x128.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_t6963_240x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_tls8204_84x48.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1601_c128032.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1608_240x128.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1608_240x64.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1610_dogxl160.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1611_dogm240.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1611_dogxl240.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1701_dogs102.c
    vendor/U8glib_Arduino/src/clib/u8g_dev_uc1701_mini12864.c
    vendor/U8glib_Arduino/src/clib/u8g_ellipse.c
    vendor/U8glib_Arduino/src/clib/u8g_font.c
    vendor/U8glib_Arduino/src/clib/u8g_font_data.c
    vendor/U8glib_Arduino/src/clib/u8g_line.c
    vendor/U8glib_Arduino/src/clib/u8g_ll_api.c
    vendor/U8glib_Arduino/src/clib/u8g_page.c
    vendor/U8glib_Arduino/src/clib/u8g_pb.c
    vendor/U8glib_Arduino/src/clib/u8g_pb14v1.c
    vendor/U8glib_Arduino/src/clib/u8g_pb16h1.c
    vendor/U8glib_Arduino/src/clib/u8g_pb16h2.c
    vendor/U8glib_Arduino/src/clib/u8g_pb16v1.c
    vendor/U8glib_Arduino/src/clib/u8g_pb16v2.c
    vendor/U8glib_Arduino/src/clib/u8g_pb32h1.c
    vendor/U8glib_Arduino/src/clib/u8g_pb8h1.c
    vendor/U8glib_Arduino/src/clib/u8g_pb8h1f.c
    vendor/U8glib_Arduino/src/clib/u8g_pb8h2.c
    vendor/U8glib_Arduino/src/clib/u8g_pb8h8.c
    vendor/U8glib_Arduino/src/clib/u8g_pb8v1.c
    vendor/U8glib_Arduino/src/clib/u8g_pb8v2.c
    vendor/U8glib_Arduino/src/clib/u8g_pbxh16.c
    vendor/U8glib_Arduino/src/clib/u8g_pbxh24.c
    vendor/U8glib_Arduino/src/clib/u8g_polygon.c
    vendor/U8glib_Arduino/src/clib/u8g_rect.c
    vendor/U8glib_Arduino/src/clib/u8g_rot.c
    vendor/U8glib_Arduino/src/clib/u8g_scale.c
    vendor/U8glib_Arduino/src/clib/u8g_state.c
    vendor/U8glib_Arduino/src/clib/u8g_u16toa.c
    vendor/U8glib_Arduino/src/clib/u8g_u8toa.c
    vendor/U8glib_Arduino/src/clib/u8g_virtual_screen.c
    vendor/U8glib_Arduino/src/U8glib.cpp
    vendor/U8glib_Arduino/src/U8glib.h
    _Bootscreen.h
    _Version.h
    blinkm.cpp
    blinkm.h
    boards.h
    buzzer.h
    cardreader.cpp
    cardreader.h
    circularqueue.h
    Conditionals.h
    Conditionals_LCD.h
    Conditionals_post.h
    Configuration.h
    Configuration_adv.h
    configuration_store.cpp
    configuration_store.h
    dac_mcp4728.cpp
    dac_mcp4728.h
    digipot_mcp4451.cpp
    dogm_bitmaps.h
    dogm_font_data_6x9_marlin.h
    dogm_font_data_HD44780_C.h
    dogm_font_data_HD44780_J.h
    dogm_font_data_HD44780_W.h
    dogm_font_data_ISO10646_1.h
    dogm_font_data_ISO10646_1_tr.h
    dogm_font_data_ISO10646_5_Cyrillic.h
    dogm_font_data_ISO10646_CN.h
    dogm_font_data_ISO10646_Greek.h
    dogm_font_data_ISO10646_Kana.h
    dogm_font_data_Marlin_symbols.h
    duration_t.h
    endstop_interrupts.h
    endstops.cpp
    endstops.h
    enum.h
    fastio.h
    language.h
    language_en.h
    M100_Free_Mem_Chk.cpp
    macros.h
    Marlin.h
    Marlin_main.cpp
    MarlinConfig.h
    MarlinSerial.cpp
    MarlinSerial.h
    mesh_bed_leveling.cpp
    mesh_bed_leveling.h
    nozzle.h
    pins.h
    pins_3DRAG.h
    pins_5DPRINT.h
    pins_A4JP.h
    pins_ANET_10.h
    pins_AZTEEG_X1.h
    pins_AZTEEG_X3.h
    pins_AZTEEG_X3_PRO.h
    pins_BAM_DICE_DUE.h
    pins_BQ_ZUM_MEGA_3D.h
    pins_BRAINWAVE.h
    pins_BRAINWAVE_PRO.h
    pins_CHEAPTRONIC.h
    pins_CNCONTROLS_11.h
    pins_CNCONTROLS_12.h
    pins_ELEFU_3.h
    pins_FELIX2.h
    pins_GEN3_MONOLITHIC.h
    pins_GEN3_PLUS.h
    pins_GEN6.h
    pins_GEN6_DELUXE.h
    pins_GEN7_12.h
    pins_GEN7_13.h
    pins_GEN7_14.h
    pins_GEN7_CUSTOM.h
    pins_K8200.h
    pins_K8400.h
    pins_LEAPFROG.h
    pins_MEGACONTROLLER.h
    pins_MEGATRONICS.h
    pins_MEGATRONICS_2.h
    pins_MEGATRONICS_3.h
    pins_MELZI.h
    pins_MELZI_MAKR3D.h
    pins_MIGHTYBOARD_REVE.h
    pins_MINIRAMBO.h
    pins_MINITRONICS.h
    pins_MKS_13.h
    pins_MKS_BASE.h
    pins_OMCA.h
    pins_OMCA_A.h
    pins_PRINTRBOARD.h
    pins_PRINTRBOARD_REVF.h
    pins_RAMBO.h
    pins_RAMPS.h
    pins_RAMPS_13.h
    pins_RAMPS_OLD.h
    pins_RIGIDBOARD.h
    pins_RIGIDBOARD_V2.h
    pins_RUMBA.h
    pins_SAINSMART_2IN1.h
    pins_SANGUINOLOLU_11.h
    pins_SANGUINOLOLU_12.h
    pins_SAV_MKI.h
    pins_SETHI.h
    pins_STB_11.h
    pins_TEENSY2.h
    pins_TEENSYLU.h
    pins_ULTIMAIN_2.h
    pins_ULTIMAKER.h
    pins_ULTIMAKER_OLD.h
    pinsDebug.h
    planner.cpp
    planner.h
    planner_bezier.cpp
    planner_bezier.h
    point_t.h
    printcounter.cpp
    printcounter.h
    qr_solve.cpp
    qr_solve.h
    SanityCheck.h
    Sd2Card.cpp
    Sd2Card.h
    SdBaseFile.cpp
    SdBaseFile.h
    SdFatConfig.h
    SdFatStructs.h
    SdFatUtil.cpp
    SdFatUtil.h
    SdFile.cpp
    SdFile.h
    SdInfo.h
    SdVolume.cpp
    SdVolume.h
    servo.cpp
    servo.h
    speed_lookuptable.h
    stepper.cpp
    stepper.h
    stepper_dac.cpp
    stepper_dac.h
    stepper_indirection.cpp
    stepper_indirection.h
    stopwatch.cpp
    stopwatch.h
    temperature.cpp
    temperature.h
    thermistornames.h
    thermistortable_1.h
    thermistortable_10.h
    thermistortable_1010.h
    thermistortable_1047.h
    thermistortable_11.h
    thermistortable_110.h
    thermistortable_12.h
    thermistortable_13.h
    thermistortable_147.h
    thermistortable_2.h
    thermistortable_20.h
    thermistortable_3.h
    thermistortable_4.h
    thermistortable_5.h
    thermistortable_51.h
    thermistortable_52.h
    thermistortable_55.h
    thermistortable_6.h
    thermistortable_60.h
    thermistortable_66.h
    thermistortable_7.h
    thermistortable_70.h
    thermistortable_71.h
    thermistortable_8.h
    thermistortable_9.h
    thermistortable_998.h
    thermistortable_999.h
    thermistortables.h
    twibus.cpp
    twibus.h
    types.h
    u8g.h
    U8glib.h
    ultralcd.cpp
    ultralcd.h
    ultralcd_impl_DOGM.h
    ultralcd_impl_HD44780.h
    ultralcd_st7920_u8glib_rrd.h
    utf_mapper.h
    utility.cpp
    utility.h
    vector_3.cpp
    vector_3.h
    Version.h
    watchdog.cpp
    watchdog.h)

add_executable(skynet_elliot ${SOURCE_FILES})